--- a/css/nav.css
+++ b/css/nav.css
@@ -4,7 +4,7 @@
     padding: 10px 20px;
     display: flex;
     justify-content: flex-start;
-    /*position: sticky;*/
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -13,9 +13,40 @@
 
 .navbar a {
     color: #000000;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     text-decoration: none;
     font-size: 18px;
     padding: 10px 15px;
     margin-right: 10px;
+}
+
+.side-navbar {
+    position: fixed;
+    top: 6.6%;
+    left: 0;
+    background-color: #D46F4D;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    z-index: 99;
+}
+
+.side-navbar a {
+    background-color: #FFBF66;
+    color: #000000;
+    padding: 12px;
+    text-align: left;
+    border: 1px solid black;
+    margin: 0;
+    font-size: 14px;
+    text-decoration: none;
+
+}
+
+.settings-btn {
+    margin-top: auto;
+    background-color: white;
+    padding: 12px;
+
 }
