--- a/css/reservation.css
+++ b/css/reservation.css
@@ -11,9 +11,9 @@
     margin-top: 5%;
 }
 
-/* Contenu de la modale */
+
 .modal-content {
-    background-color: #fff;
+    background-color: #FFBF66;
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0 0 20px rgba(0,0,0,0.3);
